agrega  busqueda de ausencia entre fechas