@@ -2,12 +2,12 @@ package com.smcapis.smcapis.repositories.interfacesimpl;
 
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
-import java.nio.file.Files;
-import java.nio.file.Paths;
 import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.util.List;
 
+import org.springframework.core.io.Resource;
+import org.springframework.core.io.ResourceLoader;
 import org.springframework.dao.EmptyResultDataAccessException;
 import org.springframework.jdbc.core.namedparam.MapSqlParameterSource;
 import org.springframework.jdbc.core.namedparam.NamedParameterJdbcTemplate;
@@ -28,18 +28,22 @@ public class AdministrativoRepositoryImpl implements AdministrativoRepository {
     private final String sql;
     private final String sqlDetalle;
 
-    public AdministrativoRepositoryImpl(NamedParameterJdbcTemplate namedParameterJdbcTemplate) {
+    public AdministrativoRepositoryImpl(NamedParameterJdbcTemplate namedParameterJdbcTemplate, ResourceLoader resourceLoader) {
         this.namedParameterJdbcTemplate = namedParameterJdbcTemplate;
 
         try {
-            this.sql = new String(Files.readAllBytes(Paths.get("src/main/resources/resumenadm.sql")),
-                    StandardCharsets.UTF_8);
-            this.sqlDetalle = new String(Files.readAllBytes(Paths.get("src/main/resources/detalleadm.sql")),
-                    StandardCharsets.UTF_8);
+
+            Resource resourceRes = resourceLoader.getResource("classpath:resumenadm.sql");
+            Resource resourceDetalle = resourceLoader.getResource("classpath:detalleadm.sql");
+            this.sql = new String(resourceRes.getInputStream().readAllBytes(), StandardCharsets.UTF_8);
+            this.sqlDetalle = new String(resourceDetalle.getInputStream().readAllBytes(), StandardCharsets.UTF_8);
         } catch (IOException e) {
             throw new FileException("Error al leer el archivo SQL");
         }
     }
+
+
+     
 
     @Override
     @Transactional
